segunda modificacion del programa

--- a/index.html
+++ b/index.html
@@ -4,81 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Sabroso Momento</title>
+    <link rel="stylesheet" href="segus.css">
+    <title>Sabroso momento</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div class="conteiner">
-                <p class="logo">Sabroso momento</p>
-                <nav>
-                    <a href="index.html">Inicio</a>
-                    <a href="menu.html">Menu</a>
-                    <a href="favoritos.html">Favoritos</a>
+        <div class="conteiner">
+            <p class="logo">Sabroso momento</p>
+            <nav>
+                <a href="index.html">Inicio</a>
+                <a href="menu.html">Menu</a>
+                <a href="favoritos.html">Favoritos</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
-    </header>
+        </header>
 
-    <section id="hero">
-        <h1>Bienvenid@s a tu sabroso momento <br>La mejor comida gourmet.</h1>
-        <div class="li">
-            <ul>
-                <li>✅​ Higiene​</li>
-                <li>✅​ Confianza​</li>
-                <li>✅​​ Seguridad</li>
-                <li>✅​ Sabor​</li>
-            </ul>
-        </div>
-    </section>
-
-    <section id="somos__sabroso">
-        <div class="conteiner">
-
-            <div class="img__conteiner"></div>
-                <h2 id="sabroso__momento">Sabroso Momento</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis soluta fuga dolores quae, aliquam incidunt ipsum facere consequatur cupiditate numquam.</p>
-        </div>
-    </section>
-
-    <section id="nuestra__comida">
-        <div class="conteiner">
-        <h2 id="algunas__comidas">Algunas de nuestras comidas</h2>
-        <div class="comida">
-            <div class="carta__uno">
-                <h3>Comida 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil natus repellat dolore, dolor quis illum esse dolores debitis quo.</p>
-                <button>+ Info</button>
+        <section id="hero">
+            <h1>Bienvenid@s a tu sabroso momento <br>La mejor comida gourmet.</h1>
+            <div class="li">
+                <ul>
+                    <li>✅​ Higiene​</li>
+                    <li>✅​ Confianza​</li>
+                    <li>✅​​ Seguridad</li>
+                    <li>✅​ Sabor​</li>
+                </ul>
             </div>
-            <div class="carta__dos">
-                <h3>Comida 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil natus repellat dolore, dolor quis illum esse dolores debitis quo.</p>
-                <button>+ Info</button>
-            </div>
-            <div class="carta__tres">
-                <h3>Comida 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum nihil natus repellat dolore, dolor quis illum esse dolores debitis quo.</p>
-                <button>+ Info</button>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <footer>
-        <div class="footer">
-            <p>&copy; Sabroso Momento 2022 | BySolracx</p>
-        </div>
-    </footer>
+
+        <section id="somos__proya">
+            <div class="conteriner">
+
+                <div class="img__conteiner"></div>
+                <h2>Sabroso momento</h2>
+                <p>checehchecheche ipsum dolor sit amet consectetur adipisicing elit. Optio assumenda inventore officia sit quam autem laboriosam exercitationem deserunt sed perferendis?</p>
+            </div>
+        </section>
+
+        <section id="nuestros__programas">
+            <div class="conteiner">
+                <h2>Promociones</h2>
+                <div class="programas">
+                    
+                    <div class="carta__uno">
+                        <h3>Lunes</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
+                    </div>
+                    <div class="carta__dos">
+                        <h3>Jueves</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
+                        </p>
+                    </div>
+                    <div class="carta__tres">
+                        <h3>Domingo</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="conteiner">
+                <p>&copy; Sabroso Momento 2022 | BySolracx</p>
+            </div>
+        </footer>
 </body>
 </html>
-
-
-<!-- .conteiner__footer{
-    position:absolute;
-    background-color: black;
-    width: 100vw;
-    text-align: center;
-    max-width: 1400px;
-    margin: auto;
-} -->
