Listo para poner media

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                         <h3>Lunes</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
                     </div>
-                    <div class="carta__dos">
+                    <div class="carta__uno">
                         <h3>Jueves</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
                         </p>
                     </div>
-                    <div class="carta__tres">
+                    <div class="carta__uno">
                         <h3>Domingo</h3>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
                     </div>
