ya con animaciones

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="segus.css">
     <title>Sabroso momento</title>
 </head>
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <body>
     <header>
         <div class="conteiner">
@@ -14,7 +16,7 @@
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="menu.html">Menu</a>
-                <a href="favoritos.html">Favoritos</a>
+                <a href="galeria.html">Galeria</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
@@ -22,24 +24,14 @@
         </header>
 
         <section id="hero">
-            <h1>Bienvenid@s a tu sabroso momento <br>La mejor comida gourmet.</h1>
+            <h1>Bienvenidos a tu sabroso momento <br>La mejor comida gourmet.</h1>
             <div class="li">
                 <ul>
-                    <li>✅​ Higiene​</li>
-                    <li>✅​ Confianza​</li>
-                    <li>✅​​ Seguridad</li>
-                    <li>✅​ Sabor​</li>
+                    <li>✅​ Higiene....​</li>
+                    <li>✅​ Confianza..​</li>
+                    <li>✅​​ Seguridad..</li>
+                    <li>✅​ Sabor......​</li>
                 </ul>
-            </div>
-        </section>
-
-
-        <section id="somos__proya">
-            <div class="conteriner">
-
-                <div class="img__conteiner"></div>
-                <h2>Sabroso momento</h2>
-                <p>checehchecheche ipsum dolor sit amet consectetur adipisicing elit. Optio assumenda inventore officia sit quam autem laboriosam exercitationem deserunt sed perferendis?</p>
             </div>
         </section>
 
@@ -48,27 +40,29 @@
                 <h2>Promociones</h2>
                 <div class="programas">
                     
-                    <div class="carta__uno">
-                        <h3>Lunes</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
-                    </div>
-                    <div class="carta__uno">
-                        <h3>Jueves</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
-                        </p>
-                    </div>
-                    <div class="carta__uno">
-                        <h3>Domingo</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
+                    <div class="animate__animated animate__backInDown">
+                        <div class="carta__uno">
+                            <h3>Lunes</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
+                        </div>
+                        <div class="carta__dos">
+                            <h3>Jueves</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
+                            </p>
+                        </div>
+                        <div class="carta__tres">
+                            <h3>Domingo</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <footer>
-            <div class="conteiner">
-                <p>&copy; Sabroso Momento 2022 | BySolracx</p>
-            </div>
-        </footer>
+<footer>
+    <div class="conteiner">
+        <p>&copy; Sabroso Momento 2022 | BySolracx</p>
+    </div>
+</footer>
 </body>
 </html>
