--- a/menu.html
+++ b/menu.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Sabroso Momento</title>
+    <link rel="stylesheet" href="segus.css">
+    <title>Sabroso momento</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div class="conteiner">
-                <p class="logo">Sabroso momento</p>
-                <nav>
-                    <a href="index.html">Inicio</a>
-                    <a href="menu.html">Menu</a>
-                    <a href="favoritos.html">Favoritos</a>
+        <div class="conteiner">
+            <p class="logo">Sabroso momento</p>
+            <nav>
+                <a href="index.html">Inicio</a>
+                <a href="menu.html">Menu</a>
+                <a href="galeria.html">Galeria</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
-    </header>
+        </header>
 
 <footer>
-    <div class="conteiner__footer">
+    <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
     </div>
-</footer>
+ </footer>
 </body>
 </html>
