--- a/nosotros.html
+++ b/nosotros.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Sabroso Momento</title>
+    <link rel="stylesheet" href="segus.css">
+    <title>Sabroso momento</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div class="conteiner">
-                <p class="logo">Sabroso momento</p>
-                <nav>
-                    <a href="index.html">Inicio</a>
-                    <a href="menu.html">Menu</a>
-                    <a href="favoritos.html">Favoritos</a>
+        <div class="conteiner">
+            <p class="logo">Sabroso momento</p>
+            <nav>
+                <a href="index.html">Inicio</a>
+                <a href="menu.html">Menu</a>
+                <a href="galeria.html">Galeria</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
-    </header>
+        </header>
+
 
 <section>
     <div class="contenedor__letras__nosotros">
@@ -32,12 +32,10 @@
             Abarcando desde la repostería más tradicional a la más vanguardista, Rafa no se pone límites y hace unos meses ha creado su propia marca personal empezando por su cuenta de Instagram (@ElAtelierdeRafa) con el objetivo de crear una comunidad que sienta la misma pasión por la pastelería como la tiene él. En su perfil puedes encontrarte recetas, trucos, vídeos o pequeñas píldoras sobre su experiencia profesional que hace que su perfil pase de todo menos desapercibido. Y como tener una cuenta de Instagram donde publicar todas las semanas nuevo contenido le está sabiendo a poco, ha lanzado ésta página personal www.elatelierderafa.com donde pretende seguir atrapando con nuevos contenidos tanto a perfiles amateur como a los más expertos en la materia. En esta web podrás suscribirte a su newsletter mensual, descargar recetas completas o descubrir consejos que te ayudarán a la hora realizar tus recetas favoritas, ¿qué será lo próximo que nos deparará El Atelier de Rafa?</p>
         </div>
         </section>  
-
 <footer>
-    <div class="footer">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste molestias fugiat officiis possimus ad dignissimos neque deleniti temporibus officia fugit!</p>
+    <div class="conteiner">
+        <p>&copy; Sabroso Momento 2022 | BySolracx</p>
     </div>
-</footer>
-</footer>
+    </footer>
 </body>
 </html>
