Preentrega2_Campos_huesos

--- a/galeria.html
+++ b/galeria.html
@@ -19,12 +19,50 @@
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
-        </header>
+    </header>
+
+
+    <article>
+        <div class="galeria">
+                <h2 class="texto__uno__galeria">Galeria <hr></h2>
+            <img src="./imagenes/comida/1.jpg" alt="">
+            <img src="./imagenes/comida/2.jpg" alt="">
+            <img src="./imagenes/comida/3.jpg" alt="">
+            <img src="./imagenes/comida/4.jpg" alt="">
+            <img src="./imagenes/comida/6.jpg" alt="">
+            <img src="./imagenes/comida/7.jpg" alt="">
+            <img src="./imagenes/comida/8.jpg" alt="">
+            <img src="./imagenes/comida/9.jpg" alt="">
+            <img src="./imagenes/comida/10.jpg" alt="">
+            <img src="./imagenes/comida/11.jpg" alt="">
+            <img src="./imagenes/comida/12.jpg" alt="">
+            <img src="./imagenes/comida/13.jpg" alt="">
+            <img src="./imagenes/comida/14.jpg" alt="">
+            <img src="./imagenes/comida/15.jpg" alt="">
+            <img src="./imagenes/comida/16.jpg" alt="">
+            <img src="./imagenes/comida/17.jpg" alt="">
+            <img src="./imagenes/comida/18.jpg" alt="">
+            <img src="./imagenes/comida/19.jpg" alt="">
+            <img src="./imagenes/comida/20.jpg" alt="">
+            <img src="./imagenes/comida/21.jpg" alt="">
+            <img src="./imagenes/comida/22.jpg" alt="">
+            <img src="./imagenes/comida/23.jpg" alt="">
+            <img src="./imagenes/comida/24.jpg" alt="">
+            <img src="./imagenes/comida/25.jpg" alt="">
+          <img src="./imagenes/comida/26.jpg" alt="">
+    </div>
+</article>
+
+
+    <aside>
+        <p class="texto__dos__galeria">En nuestra galeria  solamente se a seleccionado las mejores comidas del menu según nuestras escuestas hacia nuestros clientes, asi que pueden estar seguros de que al elegir alguno de estas comidas estaran satisfechos. <hr></p>
+    </aside>
+
 
 <footer>
     <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
     </div>
- </footer>
+</footer>
 </body>
 </html>
