--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/
             </div>
         </section>
 
-        <section id="nuestros__programas">
+        <section id="nuestras__promociones">
             <div class="conteiner">
                 <h2>Promociones</h2>
-                <div class="programas">
+                <div class="promociones">
                     
                     <div class="animate__animated animate__backInDown">
                         <div class="carta__uno">
