--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,47 @@
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
-        </header>
+    </header>
+
+    <header>
+        <article>
+            <div class="flex__conteiner">
+                <form class="form">
+                    <div class="form__section">
+                        <input type="text" class="form__input" placeholder="Escriba su correo">
+                    </div>
+                    <div class="form__section">
+                        <input type="email" class="form__input" placeholder="Escriba el asunto del correo">
+                    </div>
+                    <div class="form__section">
+                        <textarea class="form__input" placeholder="escriba su mensaje" style="resize: none;"></textarea>
+                    </div>
+                    <div class="form__section">
+                        <input type="submit" class="form__input">
+                    </div>
+                </form>
+                <div class="form__img">
+                    <img src="./iconos/correo.png" alt="correo">
+                </div>
+            </div>
+        </article>
+    </header>
+    
+
+    <aside>
+        <section class="contenido__iconos">
+            <p id="siguenos">Siguenos en nuestras redes sociales.</p>
+            <div class="iconos">
+                <img id="aside__facebook" src="./iconos/facebook.png" alt="facebook">
+                <p class="letras__iconos">Facebook</p>
+            </div>
+            <div class="iconos">
+                <img id="aside__instagram" src="./iconos/instagram.png" alt="instagram">
+                <p class="letras__iconos">Instagram</p>
+            </div>
+        </section>
+    </aside>
+
 
 <footer>
     <div class="conteiner">
