--- a/contacto.html
+++ b/contacto.html
@@ -21,44 +21,43 @@
         </div>
     </header>
 
-    <header>
-        <article>
-            <div class="flex__conteiner">
-                <form class="form">
-                    <div class="form__section">
-                        <input type="text" class="form__input" placeholder="Escriba su correo">
-                    </div>
-                    <div class="form__section">
-                        <input type="email" class="form__input" placeholder="Escriba el asunto del correo">
-                    </div>
-                    <div class="form__section">
-                        <textarea class="form__input" placeholder="escriba su mensaje" style="resize: none;"></textarea>
-                    </div>
-                    <div class="form__section">
-                        <input type="submit" class="form__input">
-                    </div>
-                </form>
-                <div class="form__img">
-                    <img src="./iconos/correo.png" alt="correo">
+
+    <article>
+        <div class="formulario">
+            <form class="form">
+                <div class="form__contacto">
+                    <p>Correo</p>
+                    <input type="text" class="" placeholder="Escriba su correo">
                 </div>
-            </div>
-        </article>
-    </header>
+                <div class="form__contacto">
+                    <p>Contacto</p>
+                    <input type="email" class="" placeholder="Escriba el asunto del correo">
+                </div>
+                <div class="form__contacto">
+                    <p>Mensaje</p>
+                    <textarea class="" placeholder="escriba su mensaje" style="resize: none;"></textarea>
+                </div>
+                <div class="submit">
+                    <input type="submit">
+                </div>
+            </form>
+        </div>
+    </article>
     
 
-    <aside>
-        <section class="contenido__iconos">
-            <p id="siguenos">Siguenos en nuestras redes sociales.</p>
-            <div class="iconos">
-                <img id="aside__facebook" src="./iconos/facebook.png" alt="facebook">
-                <p class="letras__iconos">Facebook</p>
+<!--     <aside>
+        <section class="">
+            <p id="">Siguenos en nuestras redes sociales.</p>
+            <div class="">
+                <img id="" src="." alt="facebook">
+                <p class="">Facebook</p>
             </div>
-            <div class="iconos">
-                <img id="aside__instagram" src="./iconos/instagram.png" alt="instagram">
-                <p class="letras__iconos">Instagram</p>
+            <div class="">
+                <img id="" src="" alt="instagram">
+                <p class="">Instagram</p>
             </div>
         </section>
-    </aside>
+    </aside> -->
 
 
 <footer>
