contacto solo para mobile

--- a/contacto.html
+++ b/contacto.html
@@ -25,22 +25,30 @@
     <article>
         <div class="formulario">
             <form class="form">
-                <div class="form__contacto">
+                <p>En breve momento estaremos en contacto contigo.</p>
+                <div>
+                    <p>Nombre</p>
+                    <input type="text" class="form__contacto" placeholder="Escriba su nombre">
+                </div>
+                <div>
                     <p>Correo</p>
-                    <input type="text" class="" placeholder="Escriba su correo">
+                    <input type="email" class="form__contacto" placeholder="Escriba su correo">
                 </div>
-                <div class="form__contacto">
+                <div>
                     <p>Contacto</p>
-                    <input type="email" class="" placeholder="Escriba el asunto del correo">
+                    <input type="email" class="form__contacto" placeholder="Escriba el asunto del correo">
                 </div>
-                <div class="form__contacto">
+                <div>
                     <p>Mensaje</p>
-                    <textarea class="" placeholder="escriba su mensaje" style="resize: none;"></textarea>
+                    <textarea class="" placeholder="Escriba su mensaje" style="resize: none;"></textarea>
                 </div>
                 <div class="submit">
                     <input type="submit">
                 </div>
-            </form>
+<!--                 <div class="img__contacto">
+                    <img src="./imagenes/iconos/correo.png" alt="Correo">
+                </div> -->
+                </form>
         </div>
     </article>
     
