--- a/contacto.html
+++ b/contacto.html
@@ -49,6 +49,18 @@
         </div>
     </aside>
 
+    <section>
+        <p>Siguenos en nuestras redes sociales.</p>
+        <div class="imagenes__siguenos">
+            <a href="https://www.facebook.com/profile.php?id=100024594854732">
+                <img src="./imagenes/iconos/facebook.png" width="100px" height="100px" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com/carlos_solracx/">
+                <img src="./imagenes/iconos/instagram.png" width="100px" height="100px" alt="instagram">
+            </a>
+        </div>
+    </section>
+
 <footer>
     <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
