--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./imagenes/iconos/sabroso.png" type="image/x-icon">
     <link rel="stylesheet" href="segus.css">
     <title>Sabroso momento</title>
 </head>
