--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./imagenes/iconos/sabroso.png" type="image/x-icon">
-    <link rel="stylesheet" href="segus.css">
+    <link rel="stylesheet" href="./css/segus.css">
     <title>Sabroso momento</title>
 </head>
 <link rel="stylesheet"
@@ -16,10 +16,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/
             <p class="logo">Sabroso momento</p>
             <nav>
                 <a href="index.html">Inicio</a>
-                <a href="menu.html">Menu</a>
-                <a href="galeria.html">Galeria</a>
-                <a href="nosotros.html">Nosotros</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="./html/menu.html">Menu</a>
+                <a href="./html/galeria.html">Galeria</a>
+                <a href="./html/nosotros.html">Nosotros</a>
+                <a href="./html/contacto.html">Contacto</a>
             </nav>
         </div>
         </header>
