--- a/html/galeria.html
+++ b/html/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk">
+    <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk, imagenes">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
