--- a/html/contacto.html
+++ b/html/contacto.html
@@ -55,11 +55,11 @@
     <section>
         <p>Siguenos en nuestras redes sociales.</p>
         <div class="imagenes__siguenos">
-            <a href="https://www.facebook.com/profile.php?id=100024594854732">
+            <a href="https://www.facebook.com/profile.php?id=100024594854732" target="_blank">
                 <img src="../imagenes/iconos/facebook.png" width="100px" height="100px" alt="facebook">
             </a>
-            <a href="https://www.instagram.com/carlos_solracx/">
-                <img src="../imagenes/iconos/instagram.png" width="100px" height="100px" alt="instagram">
+            <a href="https://www.instagram.com/carlos_solracx/" target="_blank">
+                <img src="../imagenes/iconos/instagram.png" width="100px" height="100px " alt="instagram">
             </a>
         </div>
     </section>
