--- a/html/galeria.html
+++ b/html/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk, imagenes">
+    <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk, imagenesComida gourmet">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
@@ -28,31 +28,31 @@
     <article>
         <div class="galeria">
                 <h2 class="texto__uno__galeria">Galeria <hr></h2>
-            <img src="../imagenes/comida/1.jpg" alt="">
-            <img src="../imagenes/comida/2.jpg" alt="">
-            <img src="../imagenes/comida/3.jpg" alt="">
-            <img src="../imagenes/comida/4.jpg" alt="">
-            <img src="../imagenes/comida/6.jpg" alt="">
-            <img src="../imagenes/comida/7.jpg" alt="">
-            <img src="../imagenes/comida/8.jpg" alt="">
-            <img src="../imagenes/comida/9.jpg" alt="">
-            <img src="../imagenes/comida/10.jpg" alt="">
-            <img src="../imagenes/comida/11.jpg" alt="">
-            <img src="../imagenes/comida/12.jpg" alt="">
-            <img src="../imagenes/comida/13.jpg" alt="">
-            <img src="../imagenes/comida/14.jpg" alt="">
-            <img src="../imagenes/comida/15.jpg" alt="">
-            <img src="../imagenes/comida/16.jpg" alt="">
-            <img src="../imagenes/comida/17.jpg" alt="">
-            <img src="../imagenes/comida/18.jpg" alt="">
-            <img src="../imagenes/comida/19.jpg" alt="">
-            <img src="../imagenes/comida/20.jpg" alt="">
-            <img src="../imagenes/comida/21.jpg" alt="">
-            <img src="../imagenes/comida/22.jpg" alt="">
-            <img src="../imagenes/comida/23.jpg" alt="">
-            <img src="../imagenes/comida/24.jpg" alt="">
-            <img src="../imagenes/comida/25.jpg" alt="">
-            <img src="../imagenes/comida/26.jpg" alt="">
+            <img src="../imagenes/comida/1.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/2.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/3.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/4.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/6.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/7.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/8.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/9.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/10.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/11.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/12.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/13.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/14.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/15.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/16.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/17.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/18.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/19.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/20.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/21.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/22.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/23.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/24.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/25.jpg" alt="Comida gourmet">
+            <img src="../imagenes/comida/26.jpg" alt="Comida gourmet">
     </div>
 </article>
 
