--- a/index.html
+++ b/index.html
@@ -24,47 +24,50 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/
                 <a href="./html/contacto.html">Contacto</a>
             </nav>
         </div>
-        </header>   
+    </header>
 
-        <section id="hero">
-            <h1>Bienvenidos a tu sabroso momento <br>La mejor comida gourmet.</h1>
-            <div class="li">
-                <ul>
-                    <li>✅​ Higiene....​</li>
-                    <li>✅​ Confianza..​</li>
-                    <li>✅​​ Seguridad..</li>
-                    <li>✅​ Sabor......​</li>
-                </ul>
-            </div>
-        </section>
+    <section id="hero">
+        <h1>Bienvenidos a tu sabroso momento <br>La mejor comida gourmet.</h1>
+        <div class="li">
+            <ul>
+                <li>✅​ Higiene....​</li>
+                <li>✅​ Confianza..​</li>
+                <li>✅​​ Seguridad..</li>
+                <li>✅​ Sabor......​</li>
+            </ul>
+        </div>
+    </section>
 
-        <section id="nuestras__promociones">
-            <div class="conteiner">
-                <h2>Promociones</h2>
-                <div class="promociones">
-                    
-                    <div class="animate__animated animate__backInDown">
-                        <div class="carta__uno">
-                            <h3>Lunes</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
-                        </div>
-                        <div class="carta__dos">
-                            <h3>Jueves</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
-                            </p>
-                        </div>
-                        <div class="carta__tres">
-                            <h3>Domingo</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
-                        </div>
+    <section id="nuestras__promociones">
+        <div class="conteiner">
+            <h2>Promociones</h2>
+            <div class="promociones">    
+                <div class="animate__animated animate__backInDown">
+                    <div class="carta__uno">
+                        <h3>Lunes</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
+                    </div>
+                    <div class="carta__dos">
+                        <h3>Jueves</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
+                        </p>
+                    </div>
+                    <div class="carta__tres">
+                        <h3>Domingo</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 <footer>
     <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
+    </div>
+    <div id="img__footer">
+        <img id="footer__uno" src="./imagenes/iconos/instagram.png" alt="instagram" width="40px">
+        <img id="footer__dos" src="./imagenes/iconos/facebook.png" alt="facebook" width="40px">
     </div>
 </footer>
 </body>
