--- a/html/contacto.html
+++ b/html/contacto.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="comida, gourmet, redes sociales, facebook, instagram, formulario, >
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Contacto</title>
 </head>
 <body>
