--- a/html/menu.html
+++ b/html/menu.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Menu</title>
 </head>
 <body>
