mejoras en nosotros y galeria

--- a/html/menu.html
+++ b/html/menu.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Menu</title>
 </head>
 <body>
@@ -268,8 +268,12 @@
     
 
 <footer>
-    <div id="footer__menu">
+    <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
+    </div>
+    <div id="img__footer">
+        <img id="footer__uno" src="../imagenes/iconos/instagram.png" alt="instagram" width="40px">
+        <img id="footer__dos" src="../imagenes/iconos/facebook.png" alt="facebook" width="40px">
     </div>
 </footer>
 </body>
