--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,10 +7,13 @@
     <meta name="keywords" content="comida, gourmet, gastronomía, clientes, servicio">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Nosotros</title>
 </head>
 <body>
+    <script src="https://kit.fontawesome.com/e819c3ca3e.js" crossorigin="anonymous"></script>
+
+
     <header>
         <div class="conteiner">
             <p class="logo">Sabroso momento</p>
@@ -25,7 +28,8 @@
         </header>
 
 
-<section>
+<section id="nosotros">
+    <h2>Sobre Nosotros</h2>
     <div id="imagen__nosotros">
         <img src="../imagenes/fondos/nosotros.JPG" width="100%" alt="restaurante">
     </div>
@@ -39,10 +43,15 @@
             ¿qué será lo próximo que nos deparará?</p>
         </div>
         </section>  
+
+        
 <footer>
     <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
     </div>
-    </footer>
-</body>
+    <div id="img__footer">
+        <img id="footer__uno" src="../imagenes/iconos/instagram.png" alt="instagram" width="40px">
+        <img id="footer__dos" src="../imagenes/iconos/facebook.png" alt="facebook" width="40px">
+    </div>
+</footer>
 </html>
