--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="comida, gourmet, promociones, lunes, jueves, domingo">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Sabroso momento</title>
 </head>
 <link rel="stylesheet"
@@ -28,7 +28,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/
 
     <section id="hero">
         <h1>Bienvenidos a tu sabroso momento <br>La mejor comida gourmet.</h1>
-        <div class="li">
+        <div id="li">
             <ul>
                 <li>✅​ Higiene....​</li>
                 <li>✅​ Confianza..​</li>
