--- a/html/contacto.html
+++ b/html/contacto.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="comida, gourmet, redes sociales, facebook, instagram, formulario, >
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Contacto</title>
 </head>
 <body>
@@ -68,6 +68,10 @@
     <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
     </div>
- </footer>
+    <div id="img__footer">
+        <img id="footer__uno" src="../imagenes/iconos/instagram.png" alt="instagram" width="40px">
+        <img id="footer__dos" src="../imagenes/iconos/facebook.png" alt="facebook" width="40px">
+    </div>
+</footer>
 </body>
 </html>
