--- a/html/galeria.html
+++ b/html/galeria.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="comida, gourmet, hamburguesa, burritos, tacos, ensalada, panini, sopa, papas a la francesa, alitas, pasta, pizza, agua, refrescos, café, té, chocomilk, imagenesComida gourmet">
     <meta name="description" content="La mejor comida gourmet en GDL Jalisco, excelente lugar, excelente sabor y bien ambiente familiar">
     <link rel="shortcut icon" href="./imagenes/iconos/icono.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Galeria</title>
 </head>
 <body>
@@ -25,39 +25,135 @@
     </header>
 
 
-    <article>
-        <div class="galeria">
-                <h2 class="texto__uno__galeria">Galeria <hr></h2>
-            <img src="../imagenes/comida/1.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/2.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/3.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/4.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/6.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/7.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/8.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/9.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/10.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/11.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/12.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/13.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/14.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/15.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/16.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/17.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/18.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/19.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/20.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/21.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/22.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/23.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/24.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/25.jpg" alt="Comida gourmet">
-            <img src="../imagenes/comida/26.jpg" alt="Comida gourmet">
-    </div>
+<article class="gal">
+    <h2>Imagenes de galeria</h2>
+    <div class="linea">
+        <section class="galeria">
+            <a href="#imagen1">
+                <img src="../imagenes/comida/1.jpg" alt="">
+            </a>
+            <a href="#imagen2">
+                <img src="../imagenes/comida/2.jpg" alt="">
+            </a>
+            <a href="#imagen3">
+                <img src="../imagenes/comida/3.jpg" alt="">
+            </a>
+            <a href="#imagen4">
+                <img src="../imagenes/comida/4.jpg" alt="">
+            </a>
+            <a href="#imagen5">
+                <img src="../imagenes/comida/5.jpg" alt="">
+            </a>
+            <a href="#imagen6">
+                <img src="../imagenes/comida/6.jpg" alt="">
+            </a>
+            <a href="#imagen7">
+                <img src="../imagenes/comida/7.jpg" alt="">
+            </a>
+            <a href="#imagen8">
+                <img src="../imagenes/comida/8.jpg" alt="">
+            </a>
+            <a href="#imagen9">
+                <img src="../imagenes/comida/9.jpg" alt="">
+            </a>
+            <a href="#imagen10">
+                <img src="../imagenes/comida/10.jpg" alt="">
+            </a>
+            <a href="#imagen11">
+                <img src="../imagenes/comida/11.jpg" alt="">
+            </a>
+            <a href="#imagen12">
+            <img src="../imagenes/comida/12.jpg" alt="">
+            </a>
+</section>
 </article>
 
+<aside class="caja" id="imagen1">
+    <a href="#imagen12" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/1.jpg" alt="">
+    <a href="#imagen2" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
 
-    <aside>
+<aside class="caja" id="imagen2">
+    <a href="#imagen1" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/2.jpg" alt="">
+    <a href="#imagen3" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen3">
+    <a href="#imagen2" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/3.jpg" alt="">
+    <a href="#imagen4" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen4">
+    <a href="#imagen3" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/4.jpg" alt="">
+    <a href="#imagen5" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen5">
+    <a href="#imagen4" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/5.jpg" alt="">
+    <a href="#imagen6" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen6">
+    <a href="#imagen5" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/6.jpg" alt="">
+    <a href="#imagen7" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen7">
+    <a href="#imagen6" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/7.jpg" alt="">
+    <a href="#imagen8" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen8">
+    <a href="#imagen7" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/8.jpg" alt="">
+    <a href="#imagen9" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen9">
+    <a href="#imagen8" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/9.jpg" alt="">
+    <a href="#imagen10" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen10">
+    <a href="#imagen9" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/10.jpg" alt="">
+    <a href="#imagen11" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen11">
+    <a href="#imagen10" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/11.jpg" alt="">
+    <a href="#imagen12" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+<aside class="caja" id="imagen12">
+    <a href="#imagen11" class="next"><i class="fa-solid fa-arrow-left"></i></a>
+    <img src="../imagenes/comida/12.jpg" alt="">
+    <a href="#imagen1" class="next"><i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="close">X</i>
+</aside>
+
+
+    <!-- <aside>
         <p class="texto__dos__galeria">En nuestra galeria  solamente se a seleccionado las mejores comidas del menu según nuestras escuestas hacia nuestros clientes, asi que pueden estar seguros de que al elegir alguno de estas comidas estaran satisfechos. <hr></p>
     </aside>
 
@@ -66,6 +162,39 @@
     <div class="conteiner">
         <p>&copy; Sabroso Momento 2022 | BySolracx</p>
     </div>
-</footer>
+    <div id="img__footer">
+        <img id="footer__uno" src="../imagenes/iconos/instagram.png" alt="instagram" width="40px">
+        <img id="footer__dos" src="../imagenes/iconos/facebook.png" alt="facebook" width="40px">
+    </div>
+</footer> -->
 </body>
 </html>
+
+<!-- <div class="galeria">
+    <h2 class="texto__uno__galeria">Galeria <hr></h2>
+<img src="../imagenes/comida/1.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/2.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/3.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/4.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/6.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/7.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/8.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/9.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/10.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/11.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/12.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/13.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/14.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/15.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/16.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/17.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/18.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/19.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/20.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/21.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/22.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/23.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/24.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/25.jpg" alt="Comida gourmet">
+<img src="../imagenes/comida/26.jpg" alt="Comida gourmet">
+</div> -->
