--- a/html/contacto.html
+++ b/html/contacto.html
@@ -53,7 +53,7 @@
     </aside>
 
     <section>
-        <p>Siguenos en nuestras redes sociales.</p>
+        <p>Siguenos en nuestras redes sociales como facebook y instagram.</p>
         <div class="imagenes__siguenos">
             <a href="https://www.facebook.com/profile.php?id=100024594854732" target="_blank">
                 <img src="../imagenes/iconos/facebook.png" width="100px" height="100px" alt="facebook">
