--- a/index.html
+++ b/index.html
@@ -45,16 +45,21 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/
                 <div class="animate__animated animate__backInDown">
                     <div class="carta__uno">
                         <h3>Lunes</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic debitis, eos voluptatem soluta, dolores vel voluptatibus praesentium itaque a sit quo nisi dolor provident illo? Nostrum voluptatibus vel temporibus et dolorem, architecto magnam aperiam?</p>
+                        <p>Lunes de pastas. <br>
+                        En la compra de cualquier pasta la segunda pasta tiene un 40% de descuento.</p>
                     </div>
                     <div class="carta__dos">
                         <h3>Jueves</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, iusto. Error accusantium maxime ea voluptate, eveniet debitis, nihil iure culpa ducimus dolor quae sed dolorem porro quo? Commodi corporis maiores aut odio placeat aliquam.
+                        <p>Jueves de jugos. <br>
+                            En la compra de cualquier alimento mayor a 80 pesos podras llevarte un jugo de 1Lt. por solo 15 pesos.
+                            o en una compra mayor a 120 podras llevarte 2 jugos GRATIS. <br>
+                            - Los sabores pueden ser cualquiera.
                         </p>
                     </div>
                     <div class="carta__tres">
                         <h3>Domingo</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam temporibus modi nemo repudiandae consectetur quo cupiditate? Soluta accusamus earum ad praesentium possimus commodi temporibus accusantium tempora, incidunt et inventore vel. Soluta quidem corporis quos.</p>
+                        <p>Domingo de hamburguesas. <br>
+                        En la compra de cualquier tipo de hamburgesa apartir de las 6pm de la tarde te podras llevar alguna bebida al 20% de descuento, en la compra de 2 hamburgesas las bebidas estaran al 40% de descuento y en la compra de 3 hamburguesas todas las bebidas disponibles al 60% de descuento. </p>
                     </div>
                 </div>
             </div>
