--- a/html/menu.html
+++ b/html/menu.html
@@ -24,8 +24,9 @@
         </div>
     </header>
 
-<article>
+<article class="menu">
     <div id="menu">
+    <div class="caja__menu">
     <h2>Entradas</h2>
         <p>Sopa de tortilla</p>
             <p class="precios">$40.00</p>
@@ -33,8 +34,10 @@
             <p class="precios">$40.00</p>
         <p>Salchicha con chamoy</p>
             <p class="precios">$50.00</p>
+    </div>
 
 
+    <div class="caja__menu">
     <h2>Alitas</h2>
         <p>BBQ o Búfalo</p>
             <p class="ingredientes">6 y 12pz</p>
@@ -42,13 +45,16 @@
         <p>Dedos de queso</p>
             <p class="ingredientes">6 y 12pz</p>
                 <p class="precios">$70.00 y 95.00</p>
+    </div>
 
 
+    <div class="caja__menu">
     <h2>Papa al horno</h2>
             <p class="ingredientes">Camarón, Arrachera o pollo.</p>
                 <p class="precios">$75.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Ensaladas</h2>
         <p>Ensalada césar camarón</p>
             <p class="ingredientes">Lechuga, crotón, queso parmesano, acederezo.</p>
@@ -68,8 +74,9 @@
         <p>Ensalada de atún</p>
             <p class="ingredientes">Lechuga, atún, salsa mexicana, crema, aguacate, jitomate y pan</p>
                 <p class="precios">$65.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Panínis</h2>
             <p>Italiano</p>
                 <p class="ingredientes">crema, pollo, tocino y aderezo pasta.</p>
@@ -83,8 +90,9 @@
             <p>Kung-fu</p>
                 <p class="ingredientes">champiñón, queso, espinaca con aderezo, parmezano con echalote.</p>
                     <p class="precios">$75.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Pastas</h2>
         <p>Queso</p>
             <p class="ingredientes">Salsa de queso y pollo empanizado.</p>
@@ -98,8 +106,9 @@
         <p>Alfredo</p>
             <p class="ingredientes">Crema, jamón y queso parmesano.</p>
                 <p class="precios">$65.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Pizza´s</h2>
         <p>Especial</p>
             <p class="ingredientes">Tocino y champiñón.</p>
@@ -116,20 +125,23 @@
         <p>Margarita</p>
             <p class="ingredientes">Jitomte, albahaba y queso.</p>
                 <p class="precios">$110.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Delishushi</h2>
                 <p class="ingredientes">Tortillas de harina, jamón, jitomate, queso, manchego, crema, aguacate y acompañado de aderezo chipotle</p>
                     <p class="precios">$70.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Tostadas</h2>
         <p>Ceviche de pescado 1pz</p>
             <p class="precios">$20.00</p>
         <p>Camarón</p>
             <p class="precios">$25.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Tacos</h2>
         <p>Camarón capeado 3pz</p>
             <p class="ingredientes">Guarnición de ensalada de col y cebolla desflamada.</p>
@@ -137,8 +149,9 @@
         <p>Pescado capeado 3pz</p>
             <p class="ingredientes">Guarnición de ensalada de col y cebolla desflamada.</p>
                 <p class="precios">$55.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Platillos</h2>
         <p>Pollo empanizado</p>
             <p class="ingredientes">Guarnición de arroz y verdura cocida y ensalada de col.</p>
@@ -155,8 +168,9 @@
         <p>alambre de arrachera</p>
             <p class="ingredientes">Arrachera, tocino, pimientos, cebolla, guarnición de frijol y arroz.</p>
                 <p class="precios">$99.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Lonches</h2>
         <p>Lonche de pierna</p>
             <p class="ingredientes">Con papas a la francesa, lechuga, jitomate y cebolla.</p>
@@ -167,8 +181,9 @@
         <p>Lonche de panela</p>
             <p class="ingredientes">Con papas a la francesa, lechuga, jitomate y cebolla.</p>
                 <p class="precios">$60.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Deli sándwich</h2>
             <p>Caribeño</p>
                 <p class="ingredientes">Pollo tocino, lechuga, jitomate y pepino.</p>
@@ -182,8 +197,9 @@
             <p>Arrachera cheese</p>
                 <p class="ingredientes">Cebolla caramelizado, champiñón, arrachera y mucho queso manchego.</p>
                     <p class="precios">$75.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Burritos</h2>
             <p>Popeye</p>
                 <p class="ingredientes">Espinaca, pollo, pesto y queso manchego.</p>
@@ -203,8 +219,9 @@
             <p>Burrito de pierna. Tortilla grande</p>
                 <p class="ingredientes">1 Tortilla de harina grande con pierna, lechuga y jitomate.</p>
                     <p class="precios">$35.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Hamburguesas</h2>
             <p>Res</p>
                 <p class="ingredientes">Lechuga, jitomate y cebolla</p>
@@ -220,8 +237,9 @@
             <p>Pollo empanizado</p>
                 <p class="ingredientes">Lechuga, jitomate y cebolla</p>
                     <p class="precios">$65.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Refrescos</h2>
         <p>Coca cola</p>
             <p class="precios">$18.00</p>
@@ -233,8 +251,9 @@
             <p class="precios">$18.00</p>
         <p>Fanta</p>
             <p class="precios">$18.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Aguas frescas</h2>
             <p>Chica</p>
                 <p class="precios">$16.00</p>
@@ -242,8 +261,9 @@
                 <p class="precios">$20.00</p>
             <p>1Lt.</p>
                 <p class="precios">$25.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Café y Té</h2>
         <p>Café colombiano</p>
             <p class="precios">$35.00</p>
@@ -251,8 +271,9 @@
             <p class="precios">$35.00</p>
         <p>Té</p>
             <p class="precios">$18.00</p>
+    </div>
 
-
+    <div class="caja__menu">
     <h2>Chocomilk</h2>
         <p>Chocomilk chico</p>
             <p class="ingredientes"></p>
