--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -29,17 +29,17 @@
 
 
 <section id="nosotros">
-    <h2>Sobre Nosotros</h2>
+    <h2>Sobre Nosotros.</h2>
     <div id="imagen__nosotros">
-        <img src="../imagenes/fondos/nosotros.JPG" width="100%" alt="restaurante">
+        <img src="../imagenes/fondos/nosotros.JPG" alt="restaurante">
     </div>
     <div class="contenedor__letras__nosotros">
         <p> 'Apasionados por la gastronomía y con las sonrisas de nuestros clientes'
-            Así se define este lugar, un joven encontró su devoción por la comida. Tras finalizar sus estudios, donde dio un par de asignaturas de comida gourmet, decidió profundizar aún más sus conocimientos entrando a nuevos lugares donde aprender nuevas tecnicas y nuevas recetas. Desde entonces, la pasión y la ilusión por estar detras de nuevas y mejoradas recetas no la ha perdido.</p>
+            Así se define este lugar, un joven encontró su devoción por la comida. Tras finalizar sus estudios, donde dio un par de asignaturas de comida gourmet, decidió profundizar aún más sus conocimientos entrando a nuevos lugares donde aprender nuevas tecnicas y nuevas recetas. Desde entonces, la pasión y la ilusión por estar detras de nuevas y mejoradas recetas no la ha perdido.</p><br>
                 
-            <p> Hoteles de lujo, fiestas privadas de la jet set árabe o comidas especializadas sin gluten son algunos de los lugares por donde este prometedor joven ha podido aprender, trabajar y divulgar sus conocimientos en este gran arte de la comida. Sin olvidarnos tampoco, que ha sido entrevistado por algunos promociones de televisión debido a sus grandes conocimientos culinarios o sido representante de la marca Bosch en el lanzamiento de algunos de sus pequeños electrodomésticos más revolucionarios.</p>
+            <p> <br> Hoteles de lujo, fiestas privadas de la jet set árabe o comidas especializadas sin gluten son algunos de los lugares por donde este prometedor joven ha podido aprender, trabajar y divulgar sus conocimientos en este gran arte de la comida. Sin olvidarnos tampoco, que ha sido entrevistado por algunos promociones de televisión debido a sus grandes conocimientos culinarios o sido representante de la marca Bosch en el lanzamiento de algunos de sus pequeños electrodomésticos más revolucionarios.</p><br>
                 
-            <p> Abarcando desde la repostería más tradicional a la más vanguardista, este joven no se pone límites y hace unos meses ha creado su propia marca personal empezando por su cuenta de Instagram con el objetivo de crear una comunidad que sienta la misma pasión por la comida como la tiene él. En su perfil puedes encontrarte recetas, trucos, vídeos o pequeñas píldoras sobre su experiencia profesional que hace que su perfil pase de todo menos desapercibido. Y como tener una cuenta de Instagram donde publicar todas las semanas nuevo contenido le está sabiendo a poco, ha lanzado ésta página personal www.sabrosomomento.com donde pretende seguir atrapando con nuevos contenidos tanto a perfiles amateur como a los más expertos en la materia. 
+            <p>  <br> Abarcando desde la repostería más tradicional a la más vanguardista, este joven no se pone límites y hace unos meses ha creado su propia marca personal empezando por su cuenta de Instagram con el objetivo de crear una comunidad que sienta la misma pasión por la comida como la tiene él. En su perfil puedes encontrarte recetas, trucos, vídeos o pequeñas píldoras sobre su experiencia profesional que hace que su perfil pase de todo menos desapercibido. Y como tener una cuenta de Instagram donde publicar todas las semanas nuevo contenido le está sabiendo a poco, ha lanzado ésta página personal www.sabrosomomento.com donde pretende seguir atrapando con nuevos contenidos tanto a perfiles amateur como a los más expertos en la materia. 
             ¿qué será lo próximo que nos deparará?</p>
         </div>
         </section>  
